--- a/src/a1-nash-saddle.ipynb
+++ b/src/a1-nash-saddle.ipynb
@@ -105,10 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 3]\n",
-      "[2]\n",
       "{'saddle_rows': [2, 3], 'saddle_cols': [2]}\n",
-      "[3, 0]\n"
+      "saddle points: [3, 0]\n"
      ]
     }
    ],
@@ -116,26 +114,6 @@
     "sp, info = simp.saddlePoint()\n",
     "print(info)\n",
     "print('saddle points:', sp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 3, 0], dtype=object)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "simp.data[2, 1:]\n"
    ]
   }
  ],
